--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="ship"></div>
+    <div id="ship" style="left:calc(50% - 25px);"></div>
     <p id="hi"></p>
     <script src="minigame.js"></script>
 </body>
