--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="ship" style="left:calc(50% - 25px);"></div>
+    <div id="ship" style="left:calc(50% - 25px);"><img src="3lives.png" alt=""></div>
     <script src="minigame.js"></script>
 </body>
 
