--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mock the block!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximu">
     <link rel="stylesheet" href="minigame.css" type="text/css">
 </head>
 
