--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mock the block!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" content="notranslate">
+    <meta http-equiv="imagetoolbar" content="no">
     <link rel="stylesheet" href="minigame.css" type="text/css">
 </head>
 
